--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng2-charts": "^6.0.1",
     "ngx-google-analytics": "^11.2.0",
     "ngx-owl-carousel-o": "^17.0.0",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.14.6"
